--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -333,12 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T01:59:17.235271Z",
-     "start_time": "2023-04-18T01:59:17.224808Z"
+     "end_time": "2023-04-18T04:53:51.614069Z",
+     "start_time": "2023-04-18T04:53:51.591609Z"
     }
    },
    "outputs": [],
@@ -425,7 +425,7 @@
     "    try:\n",
     "        mi_output = mi.continuous_screening_dataframe_parallel(\n",
     "            dataframe=abide,\n",
-    "            _usecols=abide_name.copy(),\n",
+    "            _usecols=[\"outcome\"] + abide_name,\n",
     "            csv_engine=\"c\",\n",
     "            sample=1250000,\n",
     "            multp=10,\n",
@@ -441,7 +441,7 @@
     "\n",
     "    skmi_output = mi.continuous_skMI_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
-    "        _usecols=abide_name.copy(),\n",
+    "        _usecols=[\"outcome\"] + abide_name,\n",
     "        csv_engine=\"c\",\n",
     "        sample=1250000,\n",
     "        multp=10,\n",
@@ -453,7 +453,7 @@
     "\n",
     "    pearson_output = mi.Pearson_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
-    "        _usecols=abide_name.copy(),\n",
+    "        _usecols=[\"outcome\"] + abide_name,\n",
     "        csv_engine=\"c\",\n",
     "        sample=1250000,\n",
     "        multp=10,\n",
@@ -534,7 +534,7 @@
     "    try:\n",
     "        mi_output = mi.binary_screening_dataframe_parallel(\n",
     "            dataframe=abide,\n",
-    "            _usecols=abide_name.copy(),\n",
+    "            _usecols=[\"outcome\"] + abide_name,\n",
     "            csv_engine=\"c\",\n",
     "            sample=1250000,\n",
     "            multp=10,\n",
@@ -549,7 +549,7 @@
     "\n",
     "    skmi_output = mi.binary_skMI_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
-    "        _usecols=abide_name.copy(),\n",
+    "        _usecols=[\"outcome\"] + abide_name,\n",
     "        csv_engine=\"c\",\n",
     "        sample=1250000,\n",
     "        multp=10,\n",
@@ -561,7 +561,7 @@
     "\n",
     "    pearson_output = mi.Pearson_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
-    "        _usecols=abide_name.copy(),\n",
+    "        _usecols=[\"outcome\"] + abide_name,\n",
     "        csv_engine=\"c\",\n",
     "        sample=1250000,\n",
     "        multp=10,\n",
@@ -2876,7 +2876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
