--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.488645Z",
-     "start_time": "2023-04-18T05:44:22.223652Z"
+     "end_time": "2023-04-18T15:32:39.130992Z",
+     "start_time": "2023-04-18T15:32:37.937990Z"
     }
    },
    "outputs": [],
@@ -17,7 +17,7 @@
     "from dask import dataframe as dd\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau, rankdata, norm\n",
-    "import fastHDMI as mi\n",
+    "# import fastHDMI as mi\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
     "from sklearn.decomposition import PCA\n",
@@ -45,8 +45,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.497429Z",
-     "start_time": "2023-04-18T05:44:23.489843Z"
+     "end_time": "2023-04-18T15:32:39.166858Z",
+     "start_time": "2023-04-18T15:32:39.131985Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.520521Z",
-     "start_time": "2023-04-18T05:44:23.499053Z"
+     "end_time": "2023-04-18T15:32:39.169599Z",
+     "start_time": "2023-04-18T15:32:39.167859Z"
     }
    },
    "outputs": [],
@@ -333,12 +333,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T13:30:54.999918Z",
-     "start_time": "2023-04-18T13:30:54.970614Z"
+     "end_time": "2023-04-18T15:32:39.184009Z",
+     "start_time": "2023-04-18T15:32:39.170537Z"
     }
    },
    "outputs": [],
@@ -411,7 +411,7 @@
     "    sim_data = sim_data * signs\n",
     "    sim_data = StandardScaler(copy=False).fit_transform(sim_data)\n",
     "\n",
-    "    X_cov = np.corrcoef(sim_data)\n",
+    "    X_cov = np.corrcoef(sim_data, rowvar=False)\n",
     "    true_sigma_sim = np.sqrt(true_beta.T @ X_cov @ true_beta / SNR)\n",
     "\n",
     "    outcome = sim_data @ true_beta + np.random.normal(0, true_sigma_sim,\n",
@@ -428,8 +428,6 @@
     "        mi_output = mi.continuous_screening_dataframe_parallel(\n",
     "            dataframe=abide,\n",
     "            _usecols=[\"outcome\"] + abide_name,\n",
-    "            csv_engine=\"c\",\n",
-    "            sample=1250000,\n",
     "            multp=10,\n",
     "            core_num=10,\n",
     "            share_memory=False,\n",
@@ -444,8 +442,6 @@
     "    skmi_output = mi.continuous_skMI_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
     "        _usecols=[\"outcome\"] + abide_name,\n",
-    "        csv_engine=\"c\",\n",
-    "        sample=1250000,\n",
     "        multp=10,\n",
     "        core_num=10,\n",
     "        random_state=0,\n",
@@ -456,8 +452,6 @@
     "    pearson_output = mi.Pearson_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
     "        _usecols=[\"outcome\"] + abide_name,\n",
-    "        csv_engine=\"c\",\n",
-    "        sample=1250000,\n",
     "        multp=10,\n",
     "        core_num=10,\n",
     "        share_memory=False)\n",
@@ -539,8 +533,6 @@
     "        mi_output = mi.binary_screening_dataframe_parallel(\n",
     "            dataframe=abide,\n",
     "            _usecols=[\"outcome\"] + abide_name,\n",
-    "            csv_engine=\"c\",\n",
-    "            sample=1250000,\n",
     "            multp=10,\n",
     "            core_num=10,\n",
     "            share_memory=False,\n",
@@ -554,8 +546,6 @@
     "    skmi_output = mi.binary_skMI_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
     "        _usecols=[\"outcome\"] + abide_name,\n",
-    "        csv_engine=\"c\",\n",
-    "        sample=1250000,\n",
     "        multp=10,\n",
     "        core_num=10,\n",
     "        random_state=0,\n",
@@ -566,8 +556,6 @@
     "    pearson_output = mi.Pearson_screening_dataframe_parallel(\n",
     "        dataframe=abide,\n",
     "        _usecols=[\"outcome\"] + abide_name,\n",
-    "        csv_engine=\"c\",\n",
-    "        sample=1250000,\n",
     "        multp=10,\n",
     "        core_num=10,\n",
     "        share_memory=False)\n",
@@ -678,8 +666,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.555532Z",
-     "start_time": "2023-04-18T05:44:23.534848Z"
+     "end_time": "2023-04-18T15:32:39.186698Z",
+     "start_time": "2023-04-18T15:32:39.184955Z"
     }
    },
    "outputs": [],
@@ -729,8 +717,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.570546Z",
-     "start_time": "2023-04-18T05:44:23.556851Z"
+     "end_time": "2023-04-18T15:32:39.189278Z",
+     "start_time": "2023-04-18T15:32:39.187506Z"
     }
    },
    "outputs": [],
@@ -779,8 +767,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.583044Z",
-     "start_time": "2023-04-18T05:44:23.571842Z"
+     "end_time": "2023-04-18T15:32:39.199378Z",
+     "start_time": "2023-04-18T15:32:39.192318Z"
     }
    },
    "outputs": [],
@@ -924,8 +912,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.630610Z",
-     "start_time": "2023-04-18T05:44:23.584368Z"
+     "end_time": "2023-04-18T15:32:40.096686Z",
+     "start_time": "2023-04-18T15:32:39.200423Z"
     }
    },
    "outputs": [],
@@ -1235,8 +1223,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.633286Z",
-     "start_time": "2023-04-18T05:44:23.631622Z"
+     "end_time": "2023-04-18T15:32:40.102618Z",
+     "start_time": "2023-04-18T15:32:40.099556Z"
     }
    },
    "outputs": [],
@@ -1261,8 +1249,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.671832Z",
-     "start_time": "2023-04-18T05:44:23.634360Z"
+     "end_time": "2023-04-18T15:32:41.172498Z",
+     "start_time": "2023-04-18T15:32:40.104862Z"
     }
    },
    "outputs": [],
@@ -1577,8 +1565,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.674233Z",
-     "start_time": "2023-04-18T05:44:23.672703Z"
+     "end_time": "2023-04-18T15:32:41.178971Z",
+     "start_time": "2023-04-18T15:32:41.175736Z"
     }
    },
    "outputs": [],
@@ -1605,8 +1593,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.781333Z",
-     "start_time": "2023-04-18T05:44:23.676508Z"
+     "end_time": "2023-04-18T15:32:41.393971Z",
+     "start_time": "2023-04-18T15:32:41.181670Z"
     }
    },
    "outputs": [
@@ -1782,8 +1770,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.870094Z",
-     "start_time": "2023-04-18T05:44:23.782294Z"
+     "end_time": "2023-04-18T15:32:41.502379Z",
+     "start_time": "2023-04-18T15:32:41.394899Z"
     }
    },
    "outputs": [
@@ -1966,8 +1954,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.899025Z",
-     "start_time": "2023-04-18T05:44:23.871176Z"
+     "end_time": "2023-04-18T15:32:42.351048Z",
+     "start_time": "2023-04-18T15:32:41.503507Z"
     }
    },
    "outputs": [],
@@ -2279,8 +2267,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.901707Z",
-     "start_time": "2023-04-18T05:44:23.900081Z"
+     "end_time": "2023-04-18T15:32:42.358059Z",
+     "start_time": "2023-04-18T15:32:42.353585Z"
     }
    },
    "outputs": [],
@@ -2310,8 +2298,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:23.936020Z",
-     "start_time": "2023-04-18T05:44:23.902614Z"
+     "end_time": "2023-04-18T15:32:43.187865Z",
+     "start_time": "2023-04-18T15:32:42.361999Z"
     }
    },
    "outputs": [],
@@ -2624,12 +2612,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T13:37:19.734505Z",
-     "start_time": "2023-04-18T13:31:06.800602Z"
+     "end_time": "2023-04-18T15:38:54.570903Z",
+     "start_time": "2023-04-18T15:32:43.190074Z"
     }
    },
    "outputs": [],
@@ -2656,8 +2644,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:24.007243Z",
-     "start_time": "2023-04-18T05:44:23.939927Z"
+     "end_time": "2023-04-18T15:38:54.705722Z",
+     "start_time": "2023-04-18T15:38:54.573773Z"
     }
    },
    "outputs": [
@@ -2817,8 +2805,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T05:44:24.064434Z",
-     "start_time": "2023-04-18T05:44:24.008258Z"
+     "end_time": "2023-04-18T15:38:54.773233Z",
+     "start_time": "2023-04-18T15:38:54.706612Z"
     }
    },
    "outputs": [
