split the simulations to shorten computing time

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.709318Z",
-     "start_time": "2023-04-18T17:30:06.671473Z"
+     "end_time": "2023-04-18T23:52:43.912253Z",
+     "start_time": "2023-04-18T23:52:42.475487Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.718408Z",
-     "start_time": "2023-04-18T17:30:07.710513Z"
+     "end_time": "2023-04-18T23:52:43.920858Z",
+     "start_time": "2023-04-18T23:52:43.913628Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.758603Z",
-     "start_time": "2023-04-18T17:30:07.720382Z"
+     "end_time": "2023-04-18T23:52:43.951469Z",
+     "start_time": "2023-04-18T23:52:43.922648Z"
     }
    },
    "outputs": [],
@@ -337,8 +337,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.787201Z",
-     "start_time": "2023-04-18T17:30:07.759869Z"
+     "end_time": "2023-04-18T23:52:43.978195Z",
+     "start_time": "2023-04-18T23:52:43.952455Z"
     }
    },
    "outputs": [],
@@ -346,7 +346,7 @@
     "from pathlib import Path\n",
     "\n",
     "\n",
-    "def job_generator(outcome):\n",
+    "def job_generator(outcome, num_true_vars_iter):\n",
     "    py_1 = r\"\"\"import numpy as np\n",
     "import pandas as pd\n",
     "from dask import dataframe as dd\n",
@@ -365,6 +365,22 @@
     "import os\n",
     "import itertools\n",
     "\n",
+    "# read the data\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "\n",
+    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "_abide_name = abide.columns.tolist()[1:]\n",
+    "\n",
+    "# print(_abide_name)\n",
+    "\n",
+    "abide_name = _abide_name[1:-3]\n",
+    "\n",
+    "# preserve only the neuro-imaging data\n",
+    "abide = abide[abide_name]\n",
+    "abide_original = abide.copy()\n",
+    "abide_name_original = abide_name.copy()\n",
+    "\n",
     "def convert2list(a):\n",
     "    b = np.asarray(a)\n",
     "    return b.tolist()\n",
@@ -372,20 +388,7 @@
     "    if outcome == \"continuous\":\n",
     "        py_2 = r\"\"\"\n",
     "def sim_based_on_abide_continuous(pair):\n",
-    "    # read the data\n",
-    "    csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
-    "        r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "\n",
-    "    abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
-    "    _abide_name = abide.columns.tolist()[1:]\n",
-    "\n",
-    "    # print(_abide_name)\n",
-    "\n",
-    "    abide_name = _abide_name[1:-3]\n",
-    "\n",
-    "    # preserve only the neuro-imaging data\n",
-    "    abide = abide[abide_name]\n",
-    "    \n",
+    "    abide, abide_name = abide_original.copy(), abide_name_original.copy()\n",
     "    _num_true_vars, _seed = pair\n",
     "    SNR = 3.\n",
     "    num_true_vars = _num_true_vars\n",
@@ -475,33 +478,19 @@
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
     "\n",
-    "num_true_vars_list = list(map(int, np.linspace(0, 50000,\n",
-    "                                               6)))[1:]  # we don't want 0 here\n",
+    "num_true_vars_list = [{_num_true_vars_iter}]\n",
     "seed_list = range(100)\n",
     "\n",
     "itrs = itertools.product(num_true_vars_list, seed_list)\n",
     "\n",
     "output_array = np.array(list(map(sim_based_on_abide_continuous, tqdm(itrs))))\n",
-    "output_array = output_array.reshape(5, 100, 3)\n",
-    "np.save(r\"./ABIDE_simulations/ABIDE_sim_continuous\", output_array)\n",
-    "\"\"\"\n",
+    "output_array = output_array.reshape(1, 100, 3).squeeze()\n",
+    "np.save(r\"./ABIDE_simulations/ABIDE_sim_continuous_{_num_true_vars_iter}\", output_array)\n",
+    "\"\"\".format(_num_true_vars_iter=num_true_vars_iter)\n",
     "    elif outcome == \"binary\":\n",
     "        py_2 = r\"\"\"\n",
     "def sim_based_on_abide_binary(pair):\n",
-    "    # read the data\n",
-    "    csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
-    "        r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "\n",
-    "    abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
-    "    _abide_name = abide.columns.tolist()[1:]\n",
-    "\n",
-    "    # print(_abide_name)\n",
-    "\n",
-    "    abide_name = _abide_name[1:-3]\n",
-    "\n",
-    "    # preserve only the neuro-imaging data\n",
-    "    abide = abide[abide_name]\n",
-    "    \n",
+    "    abide, abide_name = abide_original.copy(), abide_name_original.copy()\n",
     "    _num_true_vars, _seed = pair\n",
     "    SNR = 3.\n",
     "    num_true_vars = _num_true_vars\n",
@@ -579,31 +568,39 @@
     "    return np.array([mi_sensitivity, skmi_sensitivity, pearson_sensitivity])\n",
     "\n",
     "\n",
-    "num_true_vars_list = list(map(int, np.linspace(0, 50000,\n",
-    "                                               6)))[1:]  # we don't want 0 here\n",
+    "num_true_vars_list = [{_num_true_vars_iter}]\n",
     "seed_list = range(100)\n",
     "\n",
     "itrs = itertools.product(num_true_vars_list, seed_list)\n",
     "\n",
     "output_array = np.array(list(map(sim_based_on_abide_binary, tqdm(itrs))))\n",
-    "output_array = output_array.reshape(5, 100, 3)\n",
-    "np.save(r\"./ABIDE_simulations/ABIDE_sim_binary\", output_array)\n",
-    "\"\"\"\n",
+    "output_array = output_array.reshape(1, 100, 3).squeeze()\n",
+    "np.save(r\"./ABIDE_simulations/ABIDE_sim_binary_{_num_true_vars_iter}\", output_array)\n",
+    "\"\"\".format(_num_true_vars_iter=num_true_vars_iter)\n",
     "\n",
-    "    Path(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome + \".py\").touch()\n",
-    "    py_script = open(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome + \".py\", \"w\")\n",
+    "    Path(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome +\n",
+    "         r\"_{_num_true_vars_iter}\".format(\n",
+    "             _num_true_vars_iter=num_true_vars_iter) + \".py\").touch()\n",
+    "    py_script = open(\n",
+    "        r\"./ABIDE_simulations/ABIDE_sim_\" + outcome +\n",
+    "        r\"_{_num_true_vars_iter}\".format(\n",
+    "            _num_true_vars_iter=num_true_vars_iter) + \".py\", \"w\")\n",
     "    py_script.write(py_1 + py_2)\n",
     "\n",
-    "    Path(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome + \".sh\").touch()\n",
-    "    bash_script = open(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome + \".sh\",\n",
-    "                       \"w\")\n",
+    "    Path(r\"./ABIDE_simulations/ABIDE_sim_\" + outcome +\n",
+    "         r\"_{_num_true_vars_iter}\".format(\n",
+    "             _num_true_vars_iter=num_true_vars_iter) + \".sh\").touch()\n",
+    "    bash_script = open(\n",
+    "        r\"./ABIDE_simulations/ABIDE_sim_\" + outcome +\n",
+    "        r\"_{_num_true_vars_iter}\".format(\n",
+    "            _num_true_vars_iter=num_true_vars_iter) + \".sh\", \"w\")\n",
     "    bash_script.write(r\"\"\"#!/bin/bash\n",
     "#SBATCH --account=def-masd\n",
     "#SBATCH --nodes=1\n",
     "#SBATCH --cpus-per-task=32\n",
     "#SBATCH --mem=80G\n",
     "#SBATCH --time=20:00:00\n",
-    "#SBATCH --job-name=ABIDE_sim_{outcome}\n",
+    "#SBATCH --job-name={outcome}_{_num_true_vars_iter}\n",
     "\n",
     "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
     "\n",
@@ -637,16 +634,20 @@
     "nvidia-smi\n",
     "lscpu\n",
     "\n",
-    "echo \"running ABIDE_sim_{outcome}.py\"\n",
+    "echo \"running ABIDE_sim_{outcome}_{_num_true_vars_iter}.py\"\n",
     "\n",
     "cp /home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv $SLURM_TMPDIR/\n",
     "\n",
-    "python3 ABIDE_sim_{outcome}.py\n",
-    "\"\"\".format(outcome=outcome))\n",
+    "python3 ABIDE_sim_{outcome}_{_num_true_vars_iter}.py\n",
+    "\"\"\".format(outcome=outcome, _num_true_vars_iter=num_true_vars_iter))\n",
     "\n",
+    "\n",
+    "num_true_vars_list = list(map(int, np.linspace(0, 50000,\n",
+    "                                               6)))[1:]  # we don't want 0 here\n",
     "\n",
     "for outcome in [\"continuous\", \"binary\"]:\n",
-    "    job_generator(outcome=outcome)"
+    "    for num_true_vars_iter in num_true_vars_list:\n",
+    "        job_generator(outcome=outcome, num_true_vars_iter=num_true_vars_iter)"
    ]
   },
   {
@@ -666,8 +667,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.807697Z",
-     "start_time": "2023-04-18T17:30:07.788204Z"
+     "end_time": "2023-04-18T23:52:43.997655Z",
+     "start_time": "2023-04-18T23:52:43.979479Z"
     }
    },
    "outputs": [],
@@ -717,8 +718,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.818302Z",
-     "start_time": "2023-04-18T17:30:07.808771Z"
+     "end_time": "2023-04-18T23:52:44.014139Z",
+     "start_time": "2023-04-18T23:52:43.999342Z"
     }
    },
    "outputs": [],
@@ -767,8 +768,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.834219Z",
-     "start_time": "2023-04-18T17:30:07.819447Z"
+     "end_time": "2023-04-18T23:52:44.036408Z",
+     "start_time": "2023-04-18T23:52:44.016174Z"
     }
    },
    "outputs": [],
@@ -912,8 +913,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.878248Z",
-     "start_time": "2023-04-18T17:30:07.835233Z"
+     "end_time": "2023-04-18T23:52:44.094126Z",
+     "start_time": "2023-04-18T23:52:44.038257Z"
     }
    },
    "outputs": [],
@@ -1223,8 +1224,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.880727Z",
-     "start_time": "2023-04-18T17:30:07.879130Z"
+     "end_time": "2023-04-18T23:52:44.096749Z",
+     "start_time": "2023-04-18T23:52:44.095132Z"
     }
    },
    "outputs": [],
@@ -1249,8 +1250,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.920463Z",
-     "start_time": "2023-04-18T17:30:07.881641Z"
+     "end_time": "2023-04-18T23:52:44.137717Z",
+     "start_time": "2023-04-18T23:52:44.097756Z"
     }
    },
    "outputs": [],
@@ -1565,8 +1566,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:07.922954Z",
-     "start_time": "2023-04-18T17:30:07.921441Z"
+     "end_time": "2023-04-18T23:52:44.140478Z",
+     "start_time": "2023-04-18T23:52:44.138806Z"
     }
    },
    "outputs": [],
@@ -1593,84 +1594,11 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:08.036108Z",
-     "start_time": "2023-04-18T17:30:07.926113Z"
+     "end_time": "2023-04-18T23:52:44.251899Z",
+     "start_time": "2023-04-18T23:52:44.142716Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -1770,84 +1698,11 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:08.111723Z",
-     "start_time": "2023-04-18T17:30:08.037314Z"
+     "end_time": "2023-04-18T23:52:44.335091Z",
+     "start_time": "2023-04-18T23:52:44.252900Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -1954,8 +1809,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:08.141036Z",
-     "start_time": "2023-04-18T17:30:08.112707Z"
+     "end_time": "2023-04-18T23:52:44.362896Z",
+     "start_time": "2023-04-18T23:52:44.336119Z"
     }
    },
    "outputs": [],
@@ -2267,8 +2122,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:08.144112Z",
-     "start_time": "2023-04-18T17:30:08.142318Z"
+     "end_time": "2023-04-18T23:52:44.372886Z",
+     "start_time": "2023-04-18T23:52:44.363931Z"
     }
    },
    "outputs": [],
@@ -2298,8 +2153,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:30:08.191211Z",
-     "start_time": "2023-04-18T17:30:08.145503Z"
+     "end_time": "2023-04-18T23:52:44.416598Z",
+     "start_time": "2023-04-18T23:52:44.374056Z"
     }
    },
    "outputs": [],
@@ -2616,8 +2471,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:36:18.364269Z",
-     "start_time": "2023-04-18T17:30:08.192755Z"
+     "end_time": "2023-04-18T23:59:03.194208Z",
+     "start_time": "2023-04-18T23:52:44.417601Z"
     }
    },
    "outputs": [],
@@ -2644,66 +2499,11 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:36:18.436296Z",
-     "start_time": "2023-04-18T17:36:18.366419Z"
+     "end_time": "2023-04-18T23:59:03.264889Z",
+     "start_time": "2023-04-18T23:59:03.200740Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -2805,66 +2605,11 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T17:36:18.494004Z",
-     "start_time": "2023-04-18T17:36:18.437287Z"
+     "end_time": "2023-04-18T23:59:03.325096Z",
+     "start_time": "2023-04-18T23:59:03.266230Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
