--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -6,8 +6,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:43.912253Z",
-     "start_time": "2023-04-18T23:52:42.475487Z"
+     "end_time": "2023-04-19T02:16:44.148848Z",
+     "start_time": "2023-04-19T02:16:43.090026Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:43.920858Z",
-     "start_time": "2023-04-18T23:52:43.913628Z"
+     "end_time": "2023-04-19T02:16:44.158958Z",
+     "start_time": "2023-04-19T02:16:44.150494Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "id": "525e566f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:43.951469Z",
-     "start_time": "2023-04-18T23:52:43.922648Z"
+     "end_time": "2023-04-19T02:16:44.187341Z",
+     "start_time": "2023-04-19T02:16:44.160193Z"
     }
    },
    "outputs": [],
@@ -337,8 +337,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:43.978195Z",
-     "start_time": "2023-04-18T23:52:43.952455Z"
+     "end_time": "2023-04-19T02:16:44.202159Z",
+     "start_time": "2023-04-19T02:16:44.188427Z"
     }
    },
    "outputs": [],
@@ -369,17 +369,15 @@
     "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
     "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "\n",
-    "abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
-    "_abide_name = abide.columns.tolist()[1:]\n",
+    "abide_original = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "_abide_name = abide_original.columns.tolist()[1:]\n",
     "\n",
     "# print(_abide_name)\n",
     "\n",
-    "abide_name = _abide_name[1:-3]\n",
+    "abide_name_original = _abide_name[1:-3]\n",
     "\n",
     "# preserve only the neuro-imaging data\n",
-    "abide = abide[abide_name]\n",
-    "abide_original = abide.copy()\n",
-    "abide_name_original = abide_name.copy()\n",
+    "abide_original = abide_original[abide_name_original]\n",
     "\n",
     "def convert2list(a):\n",
     "    b = np.asarray(a)\n",
@@ -599,7 +597,7 @@
     "#SBATCH --nodes=1\n",
     "#SBATCH --cpus-per-task=32\n",
     "#SBATCH --mem=80G\n",
-    "#SBATCH --time=20:00:00\n",
+    "#SBATCH --time=3-12:00:00\n",
     "#SBATCH --job-name={outcome}_{_num_true_vars_iter}\n",
     "\n",
     "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
@@ -667,8 +665,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:43.997655Z",
-     "start_time": "2023-04-18T23:52:43.979479Z"
+     "end_time": "2023-04-19T02:16:44.221705Z",
+     "start_time": "2023-04-19T02:16:44.203195Z"
     }
    },
    "outputs": [],
@@ -718,8 +716,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.014139Z",
-     "start_time": "2023-04-18T23:52:43.999342Z"
+     "end_time": "2023-04-19T02:16:44.236826Z",
+     "start_time": "2023-04-19T02:16:44.222956Z"
     }
    },
    "outputs": [],
@@ -768,8 +766,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.036408Z",
-     "start_time": "2023-04-18T23:52:44.016174Z"
+     "end_time": "2023-04-19T02:16:44.248861Z",
+     "start_time": "2023-04-19T02:16:44.239132Z"
     }
    },
    "outputs": [],
@@ -913,8 +911,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.094126Z",
-     "start_time": "2023-04-18T23:52:44.038257Z"
+     "end_time": "2023-04-19T02:16:44.301845Z",
+     "start_time": "2023-04-19T02:16:44.250242Z"
     }
    },
    "outputs": [],
@@ -1224,8 +1222,8 @@
    "id": "ee471054",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.096749Z",
-     "start_time": "2023-04-18T23:52:44.095132Z"
+     "end_time": "2023-04-19T02:16:44.304675Z",
+     "start_time": "2023-04-19T02:16:44.302856Z"
     }
    },
    "outputs": [],
@@ -1250,8 +1248,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.137717Z",
-     "start_time": "2023-04-18T23:52:44.097756Z"
+     "end_time": "2023-04-19T02:16:44.350493Z",
+     "start_time": "2023-04-19T02:16:44.305813Z"
     }
    },
    "outputs": [],
@@ -1566,8 +1564,8 @@
    "id": "47f58409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.140478Z",
-     "start_time": "2023-04-18T23:52:44.138806Z"
+     "end_time": "2023-04-19T02:16:44.353114Z",
+     "start_time": "2023-04-19T02:16:44.351524Z"
     }
    },
    "outputs": [],
@@ -1594,8 +1592,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.251899Z",
-     "start_time": "2023-04-18T23:52:44.142716Z"
+     "end_time": "2023-04-19T02:16:44.545307Z",
+     "start_time": "2023-04-19T02:16:44.354061Z"
     }
    },
    "outputs": [],
@@ -1698,8 +1696,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.335091Z",
-     "start_time": "2023-04-18T23:52:44.252900Z"
+     "end_time": "2023-04-19T02:16:44.626414Z",
+     "start_time": "2023-04-19T02:16:44.546928Z"
     }
    },
    "outputs": [],
@@ -1809,8 +1807,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.362896Z",
-     "start_time": "2023-04-18T23:52:44.336119Z"
+     "end_time": "2023-04-19T02:16:44.653386Z",
+     "start_time": "2023-04-19T02:16:44.627522Z"
     }
    },
    "outputs": [],
@@ -2122,8 +2120,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.372886Z",
-     "start_time": "2023-04-18T23:52:44.363931Z"
+     "end_time": "2023-04-19T02:16:44.663312Z",
+     "start_time": "2023-04-19T02:16:44.654439Z"
     }
    },
    "outputs": [],
@@ -2153,8 +2151,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:52:44.416598Z",
-     "start_time": "2023-04-18T23:52:44.374056Z"
+     "end_time": "2023-04-19T02:16:44.699715Z",
+     "start_time": "2023-04-19T02:16:44.664515Z"
     }
    },
    "outputs": [],
@@ -2471,8 +2469,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:59:03.194208Z",
-     "start_time": "2023-04-18T23:52:44.417601Z"
+     "end_time": "2023-04-19T02:22:49.535708Z",
+     "start_time": "2023-04-19T02:16:44.700752Z"
     }
    },
    "outputs": [],
@@ -2499,8 +2497,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:59:03.264889Z",
-     "start_time": "2023-04-18T23:59:03.200740Z"
+     "end_time": "2023-04-19T02:22:49.733094Z",
+     "start_time": "2023-04-19T02:22:49.542808Z"
     }
    },
    "outputs": [],
@@ -2605,8 +2603,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-18T23:59:03.325096Z",
-     "start_time": "2023-04-18T23:59:03.266230Z"
+     "end_time": "2023-04-19T02:22:49.789440Z",
+     "start_time": "2023-04-19T02:22:49.734277Z"
     }
    },
    "outputs": [],
